--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ProfileActivity"></activity>
+        <activity android:name=".PromotionsActivity"></activity>
+        <activity android:name=".ProfileActivity" />
         <activity android:name=".EarningsActivity" />
         <activity android:name=".MenuActivity" />
         <activity android:name=".MainActivity">
