--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -28,14 +29,33 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    compile 'com.amazonaws:aws-android-sdk-core:2.4.4'
-    compile 'com.amazonaws:aws-android-sdk-ddb:2.4.4'
-    compile 'com.amazonaws:aws-android-sdk-ddb-document:2.4.4'
+    implementation "com.amazonaws:aws-android-sdk-iot:2.9.2"
+    implementation "com.amazonaws:aws-android-sdk-mobile-client:2.9.2"
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.17.1'
+    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'com.amazonaws:aws-android-sdk-ddb:2.17.1'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.17.1'
+    def aws_version = "2.9.2"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation "com.amazonaws:aws-android-sdk-iot:2.9.2"
+    implementation "com.amazonaws:aws-android-sdk-mobile-client:2.9.2"
+    implementation "com.android.support:support-compat:30.0.0"
+    implementation 'com.google.android.material:material:1.3.0-alpha02'
+    implementation 'com.amazonaws:aws-android-sdk-core:2.17.1'
+    implementation 'com.amazonaws:aws-android-sdk-ddb:2.17.1'
+    implementation 'com.amazonaws:aws-android-sdk-ddb-document:2.6.31'
 
 }
