--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          location permissions for the "MyLocation" functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
@@ -18,9 +18,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity
+            android:name=".SignupActivity"
+            android:label="Sign Up" />
+
+        <activity android:name=".LoginActivity"
+            android:label="Login">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
@@ -32,9 +38,9 @@
         <activity
             android:name=".RideActivity"
             android:label="@string/title_activity_ride" />
-        <activity android:name=".EarningsActivity" />
-        <activity android:name=".MenuActivity">
-        </activity>
+        <activity android:name=".EarningsActivity"
+            android:label="Earnings"/>
+        <activity android:name=".MenuActivity" />
     </application>
 
 </manifest>
