--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,10 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
 
@@ -45,16 +49,21 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.amazonaws:aws-android-sdk-ddb:2.17.1'
     compileOnly 'org.projectlombok:lombok:1.18.12'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.1.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
     compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.17.1'
     def aws_version = "2.9.2"
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "com.amazonaws:aws-android-sdk-iot:2.9.2"
-    implementation "com.amazonaws:aws-android-sdk-mobile-client:2.9.2"
+    implementation "com.amazonaws:aws-android-sdk-mobile-client:2.17.1"
     implementation "com.android.support:support-compat:30.0.0"
+    compile 'com.amazonaws:aws-android-sdk-core:2.17.1'
+    compile 'com.amazonaws:aws-android-sdk-ddb:2.17.1'
+    compile 'com.amazonaws:aws-android-sdk-ddb-document:2.6.31'
     implementation 'com.google.android.material:material:1.3.0-alpha02'
     implementation 'com.amazonaws:aws-android-sdk-core:2.17.1'
     implementation 'com.amazonaws:aws-android-sdk-ddb:2.17.1'
