--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,11 @@
 
         <activity android:name=".LoginActivity"
             android:label="Login">
-            <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER" />
+<!--            <intent-filter>-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
 
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <meta-data
@@ -40,7 +40,13 @@
             android:label="@string/title_activity_ride" />
         <activity android:name=".EarningsActivity"
             android:label="Earnings"/>
-        <activity android:name=".MenuActivity" />
+        <activity android:name=".MenuActivity" >
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
