--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AddRide"></activity>
         <activity
             android:name=".SignupActivity"
             android:label="Sign Up" />
-
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
             android:label="Login">
-<!--            <intent-filter>-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
 
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--            </intent-filter>-->
+            <!-- <intent-filter> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+
+
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- </intent-filter> -->
         </activity>
 
         <meta-data
@@ -38,9 +41,10 @@
         <activity
             android:name=".RideActivity"
             android:label="@string/title_activity_ride" />
-        <activity android:name=".EarningsActivity"
-            android:label="Earnings"/>
-        <activity android:name=".MenuActivity" >
+        <activity
+            android:name=".EarningsActivity"
+            android:label="Earnings" />
+        <activity android:name=".MenuActivity">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
 
